Almost completed. Some feature left:  + Views are autochanged with Blue Background.  + Except Main Screen and Option Screen, the others are not set to be autochanged with background Red and White.  + Code is still not optimized.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Screen_Options"/>
+        <activity android:name=".Screen_Game"/>
     </application>
 
 </manifest>
